[gd_scene load_steps=9 format=3 uid="uid://b02v885w0la0a"]

[ext_resource type="Script" path="res://Enemies/gremlin_two.gd" id="1_g0o58"]
[ext_resource type="Texture2D" uid="uid://ds4q4motskynt" path="res://Art/RandomArt/Gremlon.svg" id="1_gxys6"]
[ext_resource type="Script" path="res://Components/enemy_move_component.gd" id="3_vvhx3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w7ns5"]
size = Vector2(20, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mi2um"]
size = Vector2(11, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_srw85"]
size = Vector2(9, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3agkp"]
size = Vector2(20, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fgm1t"]
size = Vector2(20, 7)

[node name="GremlinTwo" type="CharacterBody2D"]
script = ExtResource("1_g0o58")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.161157, 0.161157)
texture = ExtResource("1_gxys6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_w7ns5")

[node name="RightArea" type="Area2D" parent="."]
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="RightArea"]
offset_left = 13.0
offset_top = -12.0
offset_right = 24.0
offset_bottom = 19.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightArea"]
position = Vector2(18.5, 3.5)
shape = SubResource("RectangleShape2D_mi2um")

[node name="LeftArea" type="Area2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="LeftArea"]
offset_left = -21.0
offset_top = -12.0
offset_right = -12.0
offset_bottom = 19.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftArea"]
position = Vector2(-16.5, 3.5)
shape = SubResource("RectangleShape2D_srw85")

[node name="UpperArea" type="Area2D" parent="."]
position = Vector2(-10, -19)

[node name="ColorRect" type="ColorRect" parent="UpperArea"]
offset_right = 20.0
offset_bottom = 6.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="UpperArea"]
position = Vector2(10, 3)
shape = SubResource("RectangleShape2D_3agkp")

[node name="LowerArea" type="Area2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="LowerArea"]
offset_left = -10.0
offset_top = 20.0
offset_right = 10.0
offset_bottom = 27.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LowerArea"]
position = Vector2(0, 23.5)
shape = SubResource("RectangleShape2D_fgm1t")

[node name="CompEnemyMove" type="Node" parent="." node_paths=PackedStringArray("body")]
script = ExtResource("3_vvhx3")
body = NodePath("..")

[node name="RightRaycast" type="RayCast2D" parent="."]
position = Vector2(6, 3)
target_position = Vector2(25, 0)

[node name="LeftRaycast" type="RayCast2D" parent="."]
position = Vector2(-6, 3)
target_position = Vector2(-20, 0)

[node name="UpperRaycast" type="RayCast2D" parent="."]
position = Vector2(0, -7)
target_position = Vector2(0, -22)

[node name="LowerRaycast" type="RayCast2D" parent="."]
position = Vector2(0, 10)
target_position = Vector2(0, 22)

[connection signal="body_exited" from="RightArea" to="." method="_on_right_area_body_exited"]
[connection signal="body_exited" from="LeftArea" to="." method="_on_left_area_body_exited"]
[connection signal="body_exited" from="UpperArea" to="." method="_on_upper_area_body_exited"]
[connection signal="body_exited" from="LowerArea" to="." method="_on_lower_area_body_exited"]
